name:          concurrent
category:      Data
version:       0
license:       BSD3
cabal-version: >= 1.22
license-file:  LICENSE
author:        Edward A. Kmett
maintainer:    Edward A. Kmett <ekmett@gmail.com>
stability:     experimental
homepage:      http://github.com/ekmett/concurrent/
bug-reports:   http://github.com/ekmett/concurrent/issues
copyright:     Copyright (C) 2015 Edward A. Kmett
build-type:    Custom
tested-with:   GHC == 7.10.2
synopsis:      
description:   

extra-source-files:
  CHANGELOG.markdown
  README.markdown

source-repository head
  type: git
  location: git://github.com/ekmett/concurrent.git

flag test-doctests
  default: True
  manual: True

flag test-hlint
  default: True
  manual: True

library
  build-depends:
    atomic-primops >= 0.7 && < 0.9,
    base >= 4.8 && < 5,
    deepseq,
    exceptions,
    ghc-prim,
    primitive,
    transformers >= 0.4 && < 0.5

  exposed-modules:
    Concurrent.Capability.LocalArray
    Concurrent.Exception
    Concurrent.Internal.Backoff
    Concurrent.Internal.Counted
    Concurrent.Internal.Util
    Concurrent.IVar
    Concurrent.Primitive
    Concurrent.Primitive.Array
    Concurrent.Primitive.Class
    Concurrent.Primitive.MVar
    Concurrent.Primitive.PrimRef
    Concurrent.Thread

  ghc-options: -Wall -fwarn-tabs

  c-sources:
    cbits/array.cmm
    cbits/thread.cmm
    cbits/mvar.cmm

  hs-source-dirs: src
  default-language: Haskell2010

test-suite doctests
  type:           exitcode-stdio-1.0
  main-is:        doctests.hs
  ghc-options:    -Wall -threaded
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-doctests)
    buildable: False
  else
    build-depends:
      base      >= 4.8,
      directory >= 1.0,
      doctest   >= 0.9.1,
      filepath,
      parallel

test-suite hlint
  type: exitcode-stdio-1.0
  main-is: hlint.hs
  ghc-options: -w -threaded -rtsopts -with-rtsopts=-N
  hs-source-dirs: tests
  default-language: Haskell2010

  if !flag(test-hlint)
    buildable: False
  else
    build-depends:
      base,
      hlint >= 1.7
